Fix header overlap on mobile for TriviaBot

--- a/triviabot/main.css
+++ b/triviabot/main.css
@@ -290,6 +290,10 @@ footer {
   .bodyDoubleColumns {
     flex-direction: column;
   }
+
+  #imgContainer {
+    margin-top: 100px; /* TODO */
+  }
 }
 
 .profileImg {
